# surfio-rs

./: .gitignore  Cargo.toml  pyproject.toml
src/: export_irap_ascii.rs  export_irap_binary.rs  import_irap_ascii.rs  import_irap_binary.rs  irap.rs  lib.rs  utils.rs
src/irap/: irap_structs.rs  mod.rs
src/irap/ascii/: export_irap_ascii.rs  import_irap_ascii.rs  mod.rs
src/irap/binary/: export_irap_binary.rs  import_irap_binary.rs  mod.rs
tests/: benchmark_performance.py  test_io.rs  test_irap_ascii.py  test_irap_binary.py
