[build-system]
requires = ["maturin>=1.0, <2.0"]
build-backend = "maturin"

[project]
name = "surfio-rs"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = []

[dependency-groups]
dev = ["pytest>=7.0.0", "numpy>=1.20.0", "xtgeo>=2.0.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
